@@ -29,6 +29,7 @@ Current Devel
 	- Modules: Added operserv/modreload for reloading modules.
 	- Protocols: If a server spltis, delete all servers that it acts hub to, along with their users.
 	- API: Added event_chgident() and event_chghost()
+	- operserv/modunload: Unload all modules of that service if the main module is unloaded.
 
 1.0.0-alpha2
 	- HostServ: Update hostserv/main to match the updated API.
